--- a/PianoDiProgetto/sections/economico.tex
+++ b/PianoDiProgetto/sections/economico.tex
@@ -4,6 +4,7 @@ A tale scopo vengono usati i work package identificati precedentemente, ai quali
 
 \subsubsection{Costi orari delle risorse coinvolte}
 Nella tabella qui riportata si vuole presentare una stima dei costi orari suddivisi per ruolo; i costi sono comprensivi delle ritenute a carico dell\textquoteright{}impresa.
+
 \begin{longtable}{|>{\centering}p{6cm}| >{\centering}m{3cm}| >{\centering}m{3cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
@@ -32,7 +33,7 @@ Nella tabella qui riportata si vuole presentare una stima dei costi orari suddiv
 		Verificatore Software & Interna & 18 \tabularnewline 
 		Verificatore Usabilit\`{a} & Interna & 18 \tabularnewline 
         \hline
-    \caption{Tabella costi orari}
+    \caption{Costi orari}
     \label{tab: Tabella costi orari risorse}
 \end{longtable}
 
@@ -468,7 +469,7 @@ Tabella riassuntiva degli oneri relativi alle risorse intellettuali.
 		SIAE & annuale & 261.81 \tabularnewline
 		Licenze	& annuale & 1200 \tabularnewline
 	\hline
-    \caption{Tabella costi risorse intellettuali}
+    \caption{Costi risorse intellettuali}
     \label{tab: Tabella costi risorse intellettuali}
 \end{longtable}
 \end{center}
@@ -486,7 +487,7 @@ Tabella comprensiva dei costi fissi e variabili.
 		Affitto & mensile & 400 \tabularnewline
 		Accessori hardware & annuale & 2000 \tabularnewline
 	\hline
-    \caption{Tabella riepilogativa altri costi}
+    \caption{Riepilogo altri costi}
     \label{tab: Tabella riepilogativa altri costi}
 \end{longtable}
 \end{center}
@@ -502,9 +503,10 @@ Tabella rappresentativa il riassunto dello stato economico del progetto.
 		Costi attivit\`{a} & 22715  \tabularnewline	
 		Risorse intellettuali & 5461.81 \tabularnewline
 		Altri costi & 5600 \tabularnewline
+	\hline
 		{\textbf{Totale costi}} & {\textbf{33776,81}} \tabularnewline
 	\hline
-    \caption{Tabella riepilogativa dei costi}
+    \caption{Riepilogo dei costi}
     \label{tab: Tabella riepilogativa dei costi}
 \end{longtable}
 \end{center}
