--- a/PianoDiProgetto/sections/ruoli.tex
+++ b/PianoDiProgetto/sections/ruoli.tex
@@ -1,6 +1,7 @@
-Il team \`{e} composto di 5 persone di cui 3 hanno gi\`{a} frequentato il corso di ingegneria del 
+Il team \`{e} composto da 5 persone di cui 3 hanno gi\`{a} frequentato il corso di ingegneria del 
 software, quindi \`{e} stato seguito il ciclo di vita del prodotto fino al collaudo finale, escludendo dal ciclo solo la fase relativa alla manutenzione. Per questo progetto molti ruoli vengono assegnati a risorse interne e una risorsa fisica pu\`{o} trovarsi a svolgere anche pi\`{u} di un ruolo per ragioni di costo e la valutazione del progetto di bassa complessit\`{a}. Altri ruoli sono stati assegnati a persone fisiche o giuridiche di nostra conoscenza.
 
+\begin{table}[H]
 \begin{longtable}{|>{\centering}p{5cm}| >{\centering}m{9cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
@@ -8,7 +9,7 @@ software, quindi \`{e} stato seguito il ciclo di vita del prodotto fino al colla
       \hline
 		Project Manager & Marco Baesso \tabularnewline 
 		Commercialista & Simionato Servizi Amministrativi s.r.l \tabularnewline 
-		Grafico Pubblicitario & Sost. con nome amica di Pezzutti \tabularnewline 	 
+		Grafico Pubblicitario & Fabiola Lecce \tabularnewline 	 
 		Responsabile Customer Care & Marco Petrin \tabularnewline 
 		Responsabile Finanziario & \textit{Non definito} \tabularnewline 
 		Responsabile Legale & JACOBACCI \& PARTNERS S.P.A.  \tabularnewline 
@@ -28,6 +29,7 @@ software, quindi \`{e} stato seguito il ciclo di vita del prodotto fino al colla
 		Verificatore Software & Marco Baesso \tabularnewline 
 		Verificatore Usabilit\`{a} & Marco Pezzutti \tabularnewline 
         \hline
-    \caption{Tabella assegnazione ruoli}
-    \label{tab: Tabella assegnazione ruoli}
 \end{longtable}
+\caption{Assegnazione ruoli}
+\label{tab: Tabella assegnazione ruoli}
+\end{table}
