--- a/template/config.tex
+++ b/template/config.tex
@@ -5,8 +5,8 @@
 \def\PROGETTO		{Sviluppo di un sistema informatico per la gestione dei contenuti non strutturati presenti in newsletter inviate via e-mail}
 \def\SIGLA			{ECM-1.0}
 
-\def\NOMEPROGETTO	{\textit{MailToYou}}
-\def\SIGLAPROGETTO	{\textit{M2U}}
+\def\NOMEPROGETTO	{\textit{MailForYou}}
+\def\SIGLAPROGETTO	{\textit{M4U}}
 
 \def\COMMITTENTE	{Prof. Ghiraldo Filippo}
 
