--- a/template/structure.tex
+++ b/template/structure.tex
@@ -45,6 +45,8 @@
 \usepackage{soul}
 %\usepackage{floatflt}
 \usepackage{pgf}
+\usepackage{caption}
+\captionsetup{tableposition=top, figureposition=bottom, font=small}
 
 %scalegraphics
 \makeatletter
