revisione rbs e obs

--- a/PianoDiProgetto/sections/rbs.tex
+++ b/PianoDiProgetto/sections/rbs.tex
@@ -11,7 +11,7 @@ risorse descritte.
 
 \begin{figure}[H]
 \centering % per centrare l'immagine (opzionale)
-\includegraphics[scale=0.4]{img/Risorse_rbs.png}
-\caption{Grafico RBS}
-\label{fig:Grafico RBS}
+\includegraphics[scale=0.5]{img/Risorse_rbs.png}
+\caption{Diagramma RBS}
+\label{fig:Diagramma RBS}
 \end{figure}
