--- a/PianoDiProgetto/sections/ruoli.tex
+++ b/PianoDiProgetto/sections/ruoli.tex
@@ -1,33 +1,36 @@
-Il team \`{e} composto da 5 persone di cui 3 hanno gi\`{a} frequentato il corso di ingegneria del 
-software, quindi \`{e} stato seguito il ciclo di vita del prodotto fino al collaudo finale, escludendo dal ciclo solo la fase relativa alla manutenzione. Per questo progetto molti ruoli vengono assegnati a risorse interne e una risorsa fisica pu\`{o} trovarsi a svolgere anche pi\`{u} di un ruolo per ragioni di costo e la valutazione del progetto di bassa complessit\`{a}. Altri ruoli sono stati assegnati a persone fisiche o giuridiche di nostra conoscenza.
+Il team \`{e} composto da 5 persone di cui 3 hanno gi\`{a} frequentato l'insegnamento di \textit{ingegneria del 
+software}; grazie alle conoscenze fornite da tale corso unite a quelle apprese nelle lezioni di \textit{sviluppo e gestione delle imprese} si è potuto prestare maggiore attenzione ai processi produttivi del progetto cercando di ottenere la massima qualità finale sfruttando in modo ottimale le risorse a disposizione.\\
+Si \`{e} deciso di seguire il ciclo di vita del prodotto fino al collaudo finale, escludendo dal ciclo solo la fase relativa alla manutenzione, in quanto le tempistiche universitarie non lo consentono.\\
+I numerosi ruoli che sono stati individuati per il corretto svolgimento del progetto sono stati assegnati per la maggior parte a risorse interne al gruppo di lavoro, le quali hanno assunto anche più ruoli durante il ciclo di vita. Alcuni ruoli invece sono stati assegnati a persone fisiche o giuridiche esterne al gruppo, ma di nostra conoscenza.\\
+La seguente tabella descrive tutte le risorse che intervengono alla realizzazione del progetto; quelle interne al gruppo vengono evidenziate in italico.
 
 \begin{table}[H]
 \begin{longtable}{|>{\centering}p{5cm}| >{\centering}m{9cm}|}
     \hline
     \multicolumn{1}{|c|}{\textbf{Ruolo}} &
-    \multicolumn{1}{c|}{\textbf{Risorse assegnate}} \\ %\tabularnewline 
+    \multicolumn{1}{c|}{\textbf{Risorse assegnate}} \\ %\tabularnewline
       \hline
-		Project Manager & Marco Baesso \tabularnewline 
-		Commercialista & Simionato Servizi Amministrativi s.r.l \tabularnewline 
-		Grafico Pubblicitario & Fabiola Lecce \tabularnewline 	 
-		Responsabile Customer Care & Marco Petrin \tabularnewline 
-		Responsabile Finanziario & \textit{Non definito} \tabularnewline 
-		Responsabile Legale & JACOBACCI \& PARTNERS S.P.A.  \tabularnewline 
-		Responsabile Marketing & Matteo Agostinetto  \tabularnewline 
-		Responsabile Qualit\`{a} & Marco Petrin \tabularnewline 
-		Responsabile Ricerca &  Matteo Agostinetto \tabularnewline 
-		Responsabile Sviluppo & Matteo Agostinetto  \tabularnewline 
-		Responsabile Tecnico & Mattia Persegona \tabularnewline 
-		Analista & Marco Baesso \tabularnewline 
-		Analista Competitor &  Mattia Persegona\tabularnewline 
-		Progettista & Marco Pezzutti, Marco Baesso, Matteo Agostinetto \tabularnewline 
-		Ricercatore di Innovazioni & Marco Pezzutti \tabularnewline 
-		Ricercatore di Mercato & Mattia Persegona \tabularnewline 
-		Sviluppatore Back-end & Matteo Agostinetto, Marco Pezzutti \tabularnewline 
-		Sviluppatore Front-end & Marco Petrin, Mattia Persegona \tabularnewline 
-		Grafico & Marco Petrin \tabularnewline 
-		Verificatore Software & Marco Baesso \tabularnewline 
-		Verificatore Usabilit\`{a} & Marco Pezzutti \tabularnewline 
+		Project Manager & \textit{Marco Baesso} \tabularnewline
+		Commercialista & Simionato Servizi Amministrativi S.r.l \tabularnewline
+		Grafico Pubblicitario & Fabiola Lecce \tabularnewline
+		Responsabile Customer Care & \textit{Marco Petrin} \tabularnewline 
+		Responsabile Finanziario & Non definito \tabularnewline
+		Responsabile Legale & Jacobacci \& Partners S.p.A.  \tabularnewline
+		Responsabile Marketing & \textit{Matteo Agostinetto}  \tabularnewline
+		Responsabile Qualit\`{a} & \textit{Marco Petrin} \tabularnewline
+		Responsabile Ricerca &  \textit{Matteo Agostinetto} \tabularnewline
+		Responsabile Sviluppo & \textit{Matteo Agostinetto}  \tabularnewline
+		Responsabile Tecnico & \textit{Mattia Persegona} \tabularnewline
+		Analista & \textit{Marco Baesso} \tabularnewline
+		Analista Competitor &  \textit{Mattia Persegona} \tabularnewline
+		Progettista & \textit{Marco Pezzutti}, \textit{Marco Baesso}, \textit{Matteo Agostinetto} \tabularnewline
+		Ricercatore di Innovazioni & \textit{Marco Pezzutti} \tabularnewline
+		Ricercatore di Mercato & \textit{Mattia Persegona} \tabularnewline
+		Sviluppatore Back-end & \textit{Matteo Agostinetto}, \textit{Marco Pezzutti} \tabularnewline
+		Sviluppatore Front-end & \textit{Marco Petrin}, \textit{Mattia Persegona} \tabularnewline
+		Grafico & \textit{Marco Petrin} \tabularnewline
+		Verificatore Software & \textit{Marco Baesso} \tabularnewline
+		Verificatore Usabilit\`{a} & \textit{Marco Pezzutti} \tabularnewline
         \hline
 \end{longtable}
 \caption{Assegnazione ruoli}
