aggiunto business model canvas in sezione aspetto marketing

--- a/PianoDiProgetto/sections/marketing.tex
+++ b/PianoDiProgetto/sections/marketing.tex
@@ -87,8 +87,19 @@ In questo modo il prodotto software risulterà essere più semplice da realizzar
 Adottare una corretta strategia di distribuzione risulta fondamentale per garantire al prodotto una adeguata visibilità e un consistente numero di vendite tali da rendere remunerativo il progetto.\\
 La natura digitale dei software consente di sfruttare diversi canali di distribuzione al di fuori di quelli canonici: la realizzazione di un package fisico da distribuire nei punti vendita comporta costi non sottovalutabili e rischi difficilmente calcolabili per una gruppo di lavoro emergente quale il nostro.\\
 Pertanto la soluzione più conveniente e facilmente realizzabile consiste nel realizzare un sito web dove presentare e descrivere il prodotto software; presso tale sito sarà anche possibile acquistare il software e scaricare direttamente l'installer in formato elettronico.\\
-Potrebbe risultare conveniente fornire anche una versione di prova per valutare le funzionalità del prodotto in modo da invogliare il possibile utente senza obbligarlo ad un acquisto a scatola chiusa.\\
+Potrebbe risultare conveniente fornire anche una versione di prova per valutare le funzionalità del prodotto in modo da invogliare il possibile utente senza obbligarlo ad un acquisto a scatola chiusa.
 
 \subsubsection{Promozione prodotto}
 La promozione del prodotto è un'attività fondamentale durante tutto il suo ciclo di vita, ma in special modo nella fase iniziale, nel momento in cui il prodotto si affaccia sul mercato e ha bisogno di acquisire visibilità da parte dei possibili utilizzatori.\\
-Risulta pertanto indispensabile effettuare una ricerca di possibili partner che sponsorizzino \NOMEPROGETTO{} attraverso i propri siti internet; tali partner dovranno essere scelti attentamente e dovranno avere un target di utenza compatibile con il nostro prodotto.\\
+Risulta pertanto indispensabile effettuare una ricerca di possibili partner che sponsorizzino \NOMEPROGETTO{} attraverso i propri siti internet; tali partner dovranno essere scelti attentamente e dovranno avere un target di utenza compatibile con il nostro prodotto.
+
+\subsubsection{Business model}
+Il grafico in figura \ref{fig: business model canvas} rappresenta in modo sintetico il modello di business che il gruppo ha deciso di seguire per portare a compimento il progetto.\\
+Si sono volute raggruppare tutte le informazioni trattate in questa sezione in modo da dare una visione d'insieme del progetto per quanto riguarda l'aspetto marketing; tale strumento è stato studiato nell'insegnamento di \textit{Gestione delle imprese informatiche} ed è stato molto utile per focalizzare le idee fondamentali per lo studio iniziale di questo progetto.
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.4]{img/canvasM4Y}
+\caption{Business model canvas}
+\label{fig: business model canvas}
+\end{figure}
