revisione sezione pianificazione

--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -2,38 +2,38 @@
 
 I diagrammi di Gantt sono una rappresentazione su scala temporale dell'evoluzione del
 progetto. Sono composti da varie barre orizzontali ognuna delle quali rappresenta una
-attivit\'a che viene collocata sulla scala temporale in rappresentanza dell'attivi\'a stessa.
+attività che viene collocata sulla scala temporale in rappresentanza dell'attività stessa.
 I diagrammi di Gantt hanno lo scopo di:
 \begin{itemize}
-\item definire cosa fare in una certa quantit\'a di tempo;
+\item definire cosa fare in una certa quantità di tempo;
 \item definire un riferimento per il controllo dell'avanzamento;
-\item  definire degli eventi chiave dette milestones (fine di una fase, consegna).
+\item  definire degli eventi chiave dette milestone (fine di una fase, consegna).
 \end{itemize}
 Un diagramma di Gantt consente quindi la rappresentazione grafica di un calendario di
-attivit\'a facilitando la pianificazione, il coordinamento e il tracciamento delle specifiche
-attivit\'a dando una illustrazione dello stato di avanzamento del progetto. Per costruire
+attività facilitando la pianificazione, il coordinamento e il tracciamento delle specifiche
+attività dando un'illustrazione dello stato di avanzamento del progetto. Per costruire
 un diagramma di Gantt bisogna:
 \begin{itemize}
-\item  determinare le attivit\'a necessarie per concludere il progetto;
+\item  determinare le attività necessarie per concludere il progetto;
 \item  stabilire il limite temporale del progetto;
-\item  disegnare sul grafico il limite temporale stimato per ciascuna attivit\'a;
+\item  disegnare sul grafico il limite temporale stimato per ciascuna attività;
 \item  verificare la presenza di discrepanze tra il tempo stimato e quello effettivamente
 utilizzato.
 \end{itemize}
-Tramite i diagrammi di Gantt si identifica il percorso critico: alcune attivit\'a possono
-partire solo dopo che altre sono finite, ognuna di queste attivit\'a viene detta critica e la
-loro unione forma il percorso critico. \'E molto importante che le attivit\'a critiche non
-subiscano slittamenti poich\'e questi si ripercuoterebbero, a cascata, su tutte le attivit\'a
+Tramite i diagrammi di Gantt si identifica il percorso critico: alcune attività possono
+partire solo dopo che altre sono finite, ognuna di queste attività viene detta critica e la
+loro unione forma il percorso critico. È molto importante che le attività critiche non
+subiscano slittamenti poiché questi si ripercuoterebbero, a cascata, su tutte le attività
 critiche in attesa.
 
 \subsubsection{Microsoft Project 2013}
-Per la gestione e la pianificazione del progetto si \'e scelto di usare Project2013 essendo
-un software dedicato al Project Management. Project2013 
-crea automaticamente i diagrammi di Gantt una volta inserite le singole attivit\'a. Il software permette, inoltre, di modificare
-le relazioni tra le attivit\'a e le date di inizio e fine nel caso le previsioni fatte non si
-verifichino veritiere, o per l'insorgenza di problemi inaspettati. Questa funzionalit\'a
-permette di mantenere il piano di progetto aggiornato con gli ultimi avvenimenti e d\'a
-un idea del ritardo (o anticipo) acquisiti.
+Per la gestione e la pianificazione del progetto si è scelto di usare Project 2013 essendo
+un software dedicato al Project Management. Project 2013 
+crea automaticamente i diagrammi di Gantt una volta inserite le singole attività. Il software permette, inoltre, di modificare
+le relazioni tra le attività e le date di inizio e fine nel caso le previsioni fatte non si
+rivelino veritiere, o per l'insorgenza di problemi inaspettati. Questa funzionalità
+permette di mantenere il piano di progetto aggiornato con gli ultimi avvenimenti e da
+un idea del ritardo (o anticipo) acquisito.
 
 \subsubsection{Visione Globale del Progetto}
 Viene presentata in questa sezione la visione generale del piano di progetto in modo da
@@ -43,16 +43,16 @@ dare una visione delle dipendenze tra le varie fasi, consentendo di comprendere:
 \item quanto pesa percentualmente ogni fase sia in senso economico che di tempo;
 \item l'impiego delle varie risorse.
 \end{itemize}
-Di seguito sono presentate le immagini dei work package, ossia delle macro-attivit\'a in cui
-\'e stato suddiviso il progetto, il diagramma di Gantt dell'intero progetto.
-Il progetto risulta quindi avere un costo di 22715 \euro{}, a cui si dovranno andare a
-sommare i costi di mantenimento e hosting del servizio.
+Di seguito sono presentate le immagini dei work package, ossia delle macro-attività in cui
+è stato suddiviso il progetto, il diagramma di Gantt dell'intero progetto.
+Il progetto risulta quindi avere un costo di 22715 \euro{}, a cui si andranno a
+sommare i costi di mantenimento e di ulteriori sviluppi.
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=1\textwidth]{img/Attivitanuovo.jpg}
-\caption{Diagramma  Attivit\'a}
-\label{fig:Diagramma Attivit\'a}
+\caption{Diagramma  attività}
+\label{fig:Diagramma attività}
 \end{center}
 \end{figure}
 
@@ -67,16 +67,14 @@ sommare i costi di mantenimento e hosting del servizio.
 
 \paragraph{Riepilogo stato economico delle attivit\`{a}}
 
-\begin{center}
-\begin{longtable}[H]{|>{\centering}p{3.9cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{0.6cm}| >{\centering}p{0.6cm}| >{\centering}p{0.6cm}|}
+\begin{longtable}[H]{|>{\centering}p{4cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.7cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata(gg)}} &
-    \multicolumn{1}{c|}{\textbf{Ore previste}} &
-    \multicolumn{1}{c|}{\textbf{Costo(\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata (gg)} &
+    \textbf{Ore previste} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Definizione Concept & 03/06/2013 & 11/06/2013 & 7 & 37 & 270 \tabularnewline \hline
 		Studio di fattibilit\`{a} & 12/06/2013 & 14/06/2013 & 3 & 47 & 1234 \tabularnewline \hline
 		Pianificazione & 17/06/2013 & 21/06/2013 & 5 & 32 & 1025 \tabularnewline \hline
@@ -86,19 +84,22 @@ sommare i costi di mantenimento e hosting del servizio.
 		Post vendita & 28/08/2013 & 31/10/2013 & 47 & 184 & 4135 \tabularnewline \hline
 		Commercializzazione & 17/10/2013 & 31/10/2013 & 11 & 35 & 1045 \tabularnewline \hline
 \end{longtable}
-\end{center}
-
-\par
-\par
-\par
 
 \begin{figure}[H]
-\begin{center}
-\includegraphics[scale=0.45]{img/MileProgetto.png}
-\caption{Grafico di riepilogo Costi e Durate}
-\label{fig:Grafico di riepilogo Costi e Durate}
-\end{center}
+\centering
+	\begin{subfigure}[Costo]
+		{\includegraphics[width=.45\textwidth]{img/Costo.png}}
+	\end{subfigure} \quad
+	\begin{subfigure}[Ore previste]
+		{\includegraphics[width=.45\textwidth]{img/OrePreviste.png}}
+	\end{subfigure}\\
+	\begin{subfigure}[Durata]
+		{\includegraphics[width=.45\textwidth]{img/Durata.png}}
+	\end{subfigure}
+\caption{Grafici di riepilogo costi e durate}
+\label{fig: grafici di riepilogo costi e durate}
 \end{figure}
+
 \newpage
 
 \subsubsection{Gantt Milestone}
@@ -106,18 +107,16 @@ sommare i costi di mantenimento e hosting del servizio.
 \paragraph{Definizione Concept (1.1)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Specifiche di massima & 03/06/2013 & 05/06/2013 & 3 & 270 \tabularnewline	\hline
 		Definizione delle funzionalit\`{a} d\textquoteright{}uso & 06/06/2013 & 11/06/2013 & 4 & 385 \tabularnewline \hline
-		Analisi di nuove tecnologie & 06/06/2013 & 10/06/2013 & 3 & 279 \tabularnewline
-      \hline
+		Analisi di nuove tecnologie & 06/06/2013 & 10/06/2013 & 3 & 279 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
@@ -131,43 +130,41 @@ sommare i costi di mantenimento e hosting del servizio.
 \paragraph{Studio fattibilit\`{a} (1.2)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Fattibilit\`{a} Tecnica & 12/06/2013 & 14/06/2013 & 3 & 335 \tabularnewline	\hline
 		Fattibilit\`{a} Marketing d\textquoteright{}uso & 12/06/2013 & 14/06/2013 & 3 & 319 \tabularnewline \hline
 		Fattibilit\`{a} Legale & 12/06/2013 & 14/06/2013 & 3 & 315 \tabularnewline \hline
-		Fattibilit\`{a} Economica & 12/06/2013 & 14/06/2013 & 3 & 265 \tabularnewline
-      \hline
+		Fattibilit\`{a} Economica & 12/06/2013 & 14/06/2013 & 3 & 265 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
 \begin{figure}[H]
 \centering % per centrare l'immagine (opzionale)
 \includegraphics[scale=0.4]{img/Studio Fattibilita.png}
-\caption{GraficoStudio Fattibilita}
+\caption{Grafico Studio Fattibilità}
 \label{fig:Grafico Studio Fattibilita}
 \end{figure}
 
+\newpage
+
 \paragraph{Pianificazione (1.3)}
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Pianificazione qualit\`{a} del prodotto & 17/06/2013 & 17/06/2013 & 1 & 245 \tabularnewline \hline
 		Analisi dei rischi & 17/06/2013 & 18/06/2013 & 2 & 255 \tabularnewline \hline
-		Pianificazione del lavoro & 18/06/2013 & 21/06/2013 & 4 & 525 \tabularnewline
-      \hline
+		Pianificazione del lavoro & 18/06/2013 & 21/06/2013 & 4 & 525 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
@@ -181,21 +178,19 @@ sommare i costi di mantenimento e hosting del servizio.
 \paragraph{Analisi e progettazione (1.4)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Definizione dei casi d\textquoteright{}uso & 24/06/2013 & 27/06/2013 & 4 & 445 \tabularnewline \hline
 		Definizione dei requisiti & 28/06/2013 & 05/07/2013 & 6 & 821 \tabularnewline \hline
 		Progettazione ad alto livello & 15/07/2013 & 19/07/2013 & 4 & 976 \tabularnewline \hline
 		Progettazione di dettaglio & 22/07/2013 & 02/08/2013 & 10 & 1405 \tabularnewline
       \hline
-	Documentazione database & 26/08/2013 & 27/08/2013 & 2 & 355 \tabularnewline
-      \hline
+	Documentazione database & 26/08/2013 & 27/08/2013 & 2 & 355 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
@@ -206,17 +201,18 @@ sommare i costi di mantenimento e hosting del servizio.
 \label{fig:Grafico Analisi Progettazione}
 \end{figure}
 
+\newpage
+
 \paragraph{Sviluppo (1.5)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Realizzazione database & 28/08/2013 & 03/09/2013 & 5 & 575 \tabularnewline \hline
 		Realizzazione componenti & 04/09/2013 & 02/10/2013 & 21 & 6755 \tabularnewline \hline
 \end{longtable}
@@ -232,18 +228,17 @@ sommare i costi di mantenimento e hosting del servizio.
 \paragraph{Test (1.6)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Test di unit\`{a} & 11/09/2013 & 09/10/2013 & 21 & 990 \tabularnewline \hline
 		Test di integrazione & 16/09/2013 & 11/10/2013 & 20 & 1080 \tabularnewline \hline
-Test di sistema & 14/10/2013 & 15/10/2013 & 2 & 625 \tabularnewline \hline
-Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
+		Test di sistema & 14/10/2013 & 15/10/2013 & 2 & 625 \tabularnewline \hline
+		Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
 \end{longtable}
 \end{center}
 
@@ -254,17 +249,18 @@ Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
 \label{fig:Grafico Test}
 \end{figure}
 
+\newpage
+
 \paragraph{Post vendita (1.7)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Manuali utente & 03/10/2013 & 08/10/2013 & 4 & 525 \tabularnewline \hline
 		Assistenza e Manutenzione & 28/08/2013 & 31/10/2013 & 47 & 3610 \tabularnewline \hline
 \end{longtable}
@@ -280,14 +276,13 @@ Collaudo finale & 16/10/2013 & 16/10/2013 & 1 & 315 \tabularnewline \hline
 \paragraph{Commercializzazione (1.8)}
 
 \begin{center}
-\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{1cm}| >{\centering}p{1.5cm}|}
+\begin{longtable}[H]{|>{\centering}p{6cm}| >{\centering}p{2cm}| >{\centering}m{2cm}| >{\centering}p{1.3cm}| >{\centering}p{1.2cm}|}
     \hline
-    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
-    \multicolumn{1}{c|}{\textbf{Data inizio}} &
-    \multicolumn{1}{c|}{\textbf{Data fine}} &
-    \multicolumn{1}{c|}{\textbf{Durata}} &
-    \multicolumn{1}{c|}{\textbf{Costo (\euro)}} \\ %\tabularnewline 
-      \hline
+    \textbf{Attivit\`{a}} &
+    \textbf{Data inizio} &
+    \textbf{Data fine} &
+    \textbf{Durata} &
+    \textbf{Costo (\euro)} \tabularnewline \hline
 		Promozione del prodotto & 17/10/2013 & 31/10/2013 & 11 & 730 \tabularnewline \hline
 		Assistenza e Manutenzione & 23/10/2013 & 23/10/2013 & 1 & 315 \tabularnewline \hline
 \end{longtable}
