--- a/template/structure.tex
+++ b/template/structure.tex
@@ -46,7 +46,10 @@
 %\usepackage{floatflt}
 \usepackage{pgf}
 \usepackage{caption}
+\usepackage{subfigure}
+
 \captionsetup{tableposition=top, figureposition=bottom, font=small}
+
 
 %scalegraphics
 \makeatletter
