Modificato foto Attivita

--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -50,7 +50,7 @@ sommare i costi di mantenimento e di ulteriori sviluppi.
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\textwidth]{img/Attivitanuovo.jpg}
+\includegraphics[width=1\textwidth]{img/Ganttnuovo2.jpg}
 \caption{Diagramma  attività}
 \label{fig:Diagramma attività}
 \end{center}
