--- a/PianoDiProgetto/sections/rischi.tex
+++ b/PianoDiProgetto/sections/rischi.tex
@@ -1,51 +1,45 @@
 Con il termine rischio si vuole identificare la probabilità che un'azione porti al verificarsi di
-eventi indesiderati. Nel corso della realizzazione di un progetto i rischi sono inevitabili, è dunque opportuno analizzare i potenziali rischi, stimare la probabilità con cui si possono verificare ed individuare eventuali procedure per mitigarli. \\
-\linebreak
+eventi indesiderati. Nel corso della realizzazione di un progetto i rischi sono inevitabili, è dunque opportuno analizzare i potenziali rischi, stimare la probabilità con cui si possono verificare ed individuare eventuali procedure per mitigarli.
 
-\textbf{Identificazione del rischio}\\
+\paragraph*{Identificazione del rischio}
 L'identificazione del rischio ha l'obiettivo di portare all'attenzione delle parti
 coinvolte nel progetto un insieme, il più possibile completo e corretto, di elementi di criticità che
 costituiscono la base per la valutazione del rischio generale e per la predisposizione delle
-opportune procedure di mitigazione.\\
-\linebreak
+opportune procedure di mitigazione.
 
-\textbf{Quantificazione del rischio}\\
-La quantificazione dei rischi potenziali dà una base alla valutazione di quella dell'intero
+\paragraph*{Quantificazione del rischio}
+La quantificazione dei rischi potenziali da una base alla valutazione di quella dell'intero
 progetto. Si intende evidenziare come la sua valorizzazione non sia assoluta, ma dipenda da due fattori fondamentali: il
 tempo e le tecniche adottate per attenuarlo. La prima dipendenza è legata al fatto che al
-semplice passare del tempo, gli elementi di rischiosità tendono a cambiare sia in termini
+semplice passare del tempo, gli elementi di rischio tendono a cambiare sia in termini
 di probabilità di accadimento, che in termini di danno arrecabile al progetto. Per il
 secondo aspetto, invece, occorre osservare che l'entità del rischio dipende fortemente
 dalle strategie che vengono messe in atto per controllarlo. Possiamo aspettarci
-che la valutazione iniziale sia significativamente superiore a quella successiva proprio in virtù dell'efficacia del piano di azione individuato. 
+che la valutazione iniziale sia significativamente superiore a quella successiva proprio in virtù dell'efficacia del piano di azione individuato.
 
-\begin{longtable}{|>{\centering}p{5cm}| >{\centering}m{5cm}| }
+\begin{longtable}{|>{\centering}p{3cm}| >{\centering}m{5cm}| }
     \hline
-    \multicolumn{1}{|c|}{\textbf{Livello}} &
-    \multicolumn{1}{c|}{\textbf{Probabilità}} \\ %\tabularnewline 
-      \hline
-        1 & $ \le 5 \% $\tabularnewline
-		2 & $ \ge 5 \%$ e $ \le 20 \% $\tabularnewline
-		3 & $ \ge 20 \%$ e $ \le 40 \% $\tabularnewline
-		4 & $ \ge 40 \%$ e $ \le 60 \% $\tabularnewline
+    \textbf{Livello} & \textbf{Probabilità} \tabularnewline \hline
+        1 & $ \le 5 \%$ \tabularnewline
+		2 & $ \ge 5 \%$ e $ \le 20 \% $ \tabularnewline
+		3 & $ \ge 20 \%$ e $ \le 40 \% $ \tabularnewline
+		4 & $ \ge 40 \%$ e $ \le 60 \% $ \tabularnewline
 		5 & $ \ge 60 \%$ \tabularnewline
-      \hline
-    \caption{Metrica valutazione probabilità di rischio}
-    \label{tab: Metrica valutazione probabilità di rischio}
-  \end{longtable}
-  
+	\hline
+\caption{Metrica valutazione probabilità di rischio}
+\label{tab: Metrica valutazione probabilità di rischio}
+\end{longtable}
 
-
-\textbf{Progettazione interventi}\\
+\paragraph*{Progettazione interventi}
 La progettazione ha l'obiettivo di fornire la pianificazione di un insieme coerente e
 sostenibile di attività e di responsabilità per il controllo del rischio e l'individuazione
-delle modalità di misura associate al controllo dei risultati.\\
-\linebreak
-\textbf{Esecuzione degli interventi}\\
+delle modalità di misura associate al controllo dei risultati.
+
+\paragraph*{Esecuzione degli interventi}
 Avendo stabilito la migliore strategia di mitigazione del rischio, si applica l'intervento
-alla lista di processi produttivi interessati.\\
-\linebreak
-\textbf{Verifica intervento}\\
+alla lista di processi produttivi interessati.
+
+\paragraph*{Verifica intervento}
 L'obiettivo di questa attività è di valutare l'efficacia e l'efficienza dimostrata dal piano di
 gestione del rischio al fine di confermarne la validità o di innescare una fase di revisione
 del sistema di gestione del rischio.
@@ -53,40 +47,39 @@ del sistema di gestione del rischio.
 
 \subsection{Indisposizione del personale} 
 \begin{description}
-\item[Descrizione:]c'è la possibilità che uno, o più membri del gruppo di lavoro, non possa prendere parte attivamente al progetto per un periodo di tempo variabile causa malattia o impegni personali importanti. Ciò può comportare dei rallentamenti, fino al possibile mancato rispetto dei termini di rilascio previsti.
-
+\item[Descrizione:]c'è la possibilità che uno, o più membri del gruppo di lavoro, non possano prendere parte attivamente al progetto per un periodo di tempo variabile causa malattia o impegni personali importanti. Ciò può comportare dei rallentamenti, fino al possibile mancato rispetto dei termini di rilascio previsti.
 \item[Soluzione:] In tale circostanza, il gruppo di lavoro sarà considerato in stato d'emergenza. Il responsabile del gruppo o, in mancanza, il PM, ha l'onere di decidere se:
-\begin{itemize}
-\item l'assente può continuare il proprio lavoro temporaneamente tramite telelavoro;
-\item è possibile ridistribuire (tutto o in parte) il lavoro tra i restanti membri del gruppo;
-\item si rende necessaria l'assunzione temporanea di nuovo personale;
-\item tale assenza comporterà o meno un ritardo del progetto.
-\end{itemize}
+	\begin{itemize}
+	\item l'assente può continuare il proprio lavoro temporaneamente tramite telelavoro;
+	\item è possibile ridistribuire (tutto o in parte) il lavoro tra i restanti membri del gruppo;
+	\item si rende necessaria l'assunzione temporanea di nuovo personale;
+	\item tale assenza comporterà o meno un ritardo del progetto;
+	\end{itemize}
 Se l'indisponibilità tuttavia permane, senza motivi validi, il responsabile dovrà dapprima cercare di risolvere il problema con l'interessato e, in ultima istanza, contattare gli organi sindacali competenti.
 \item[Impatto:] 4, se ciò colpisce più membri contemporaneamente, l'impatto può essere gravoso e portare a rallentamenti significativi.
 \item[Probabilità:] 3.
-\item[Controllo:] Qui sono fondamentali le figure del responsabile e del PM che dovranno monitorare l'avanzamento del progetto ed agire tempestivamente in caso di assenze o ritardi per non causare rallentamenti nello sviluppo del prodotto, è inoltre importante comunicare repentinamente eventuali indisponibilità agli altri membri del gruppo, soprattutto se programmabili, per permettere al responsabile di redistribuire il carico di lavoro correttamente ed in modo efficiente. 
+\item[Controllo:] Sono fondamentali le figure del responsabile e del PM che dovranno monitorare l'avanzamento del progetto ed agire tempestivamente in caso di assenze o ritardi per non causare rallentamenti nello sviluppo del prodotto, è inoltre importante comunicare repentinamente eventuali indisponibilità agli altri membri del gruppo, soprattutto se programmabili, per permettere al responsabile di redistribuire il carico di lavoro correttamente ed in modo efficiente.
 \end{description}
 
 \subsection{Fallimento del progetto}
 \begin{description}
-\item[Descrizione:] Il prodotto che l'azienda vuole sviluppare è presente sul mercato, ma i numerosi rivali (competitor) che propongono questo tipo di prodotto si sono cimentati solamente nello sviluppo dell'applicativo per piattaforma Microsoft senza dare importanza a altre piattaforme come Linux.
+\item[Descrizione:] Il prodotto che l'azienda vuole sviluppare è presente sul mercato, ma i numerosi rivali (competitor) che propongono questo tipo di prodotto si sono cimentati solamente nello sviluppo dell'applicativo per piattaforma Microsoft Windows senza dare importanza a altre piattaforme come GNU/Linux.
 Il rischio è quindi che i competitor aggiornino i loro prodotti includendo anche le
-funzionalità da noi proposte(sviluppo per più piattaforme) e, forti di una base di utenti molto ampia, non permettano ulteriori sviluppi del progetto decretandone una fine prematura. La sola presenza nel mercato di altri competitor con un'ampia base di utenza, pone il progetto a rischio di fallimento.
+funzionalità da noi proposte (sviluppo per più piattaforme) e, forti di una base di utenti molto ampia, non permettano ulteriori sviluppi del progetto decretandone una fine prematura. La sola presenza nel mercato di altri competitor con un'ampia base di utenza, pone il progetto a rischio di fallimento.
 \item[Soluzione:] Per cercare di minimizzare il più possibile tale rischio si adotteranno le
 seguenti procedure:
-\begin{itemize}
-\item nelle fasi precedenti all'analisi e alla progettazione del prodotto sarà posta
-massima cura nel pregi e difetti delle soluzioni adottate dai competitor, oltre ad evidenziarne eventuali parti
-migliorabili. Sarà posta anche particolare cura nel capire quali sono le mind maps degli utenti che utilizzano prodotti affini a quello sviluppato e si cercherà di replicarle nel prodotto finito. Tale strategia permette all'azienda di partire avvantaggiata nello sviluppo del prodotto, cercando di replicare il feeling che l'utente ha sviluppato con prodotti affini e cercando di migliorare i difetti comuni.
-\item nelle fasi immediatamente precedenti al rilascio sarà fatta una campagna
-pubblicitaria massiva e che punti a far crescere l'interesse verso il nostro prodotto.
-\item nelle fasi successive al rilascio la campagna pubblicitaria dovrà rendere chiaro
-in cosa il prodotto si distingue rispetto ai concorrenti.
-\item l'azienda dovrà porre particolare cura al rapporto con gli utenti e dovrà
-proporre soluzioni o migliorie tempestive basandosi sui possibili consigli da parte del pubblico.
-\item l'azienda in generale dovrà mettere in atto quanto descritto nella sezione Pubblicità  del documento
-\end{itemize}
+	\begin{itemize}
+	\item nelle fasi precedenti all'analisi e alla progettazione del prodotto sarà posta
+	massima cura nel pregi e difetti delle soluzioni adottate dai competitor, oltre ad evidenziarne eventuali parti
+	migliorabili. Sarà posta anche particolare cura nel capire quali sono le mappe mentali degli utenti che utilizzano prodotti affini a quello sviluppato e si cercherà di replicarle nel prodotto finito. Tale strategia permette all'azienda di partire avvantaggiata nello sviluppo del prodotto, cercando di replicare il feeling che l'utente ha sviluppato con prodotti affini e cercando di migliorare i difetti comuni;
+	\item nelle fasi immediatamente precedenti al rilascio sarà fatta una campagna
+	pubblicitaria massiva che punti a far crescere l'interesse verso il nostro prodotto;
+	\item nelle fasi successive al rilascio la campagna pubblicitaria dovrà rendere chiaro
+	in cosa il prodotto si distingue rispetto ai concorrenti;
+	\item l'azienda dovrà porre particolare cura al rapporto con gli utenti e dovrà
+	proporre soluzioni o migliorie tempestive basandosi sui possibili consigli da parte del pubblico;
+	\item l'azienda in generale dovrà mettere in atto quanto descritto nella sezione Pubblicità del documento.
+	\end{itemize}
 \item[Impatto:] 5, la mancata adozione del nostro prodotto da parte degli utenti porterebbe
 al fallimento stesso del progetto.
 \item[Probabilità:] 3, il numero di competitor non è molto elevato ed il rischio che loro adattino
@@ -95,7 +88,7 @@ il loro prodotto includendo le novità da noi proposte è sostanziale.
 e valutare settimanalmente quali azioni compiere per incrementarli.
 \end{description}
 
-\subsection{Difficoltà nel pianificare correttamente i tempi di sviluppo}
+\subsection{Errata pianificazione temporale}
 \begin{description}
 \item[Descrizione:] C'è il forte rischio di effettuare una stima errata in materia di ore/persona necessarie allo svolgimento dell'intero progetto e della loro allocazione alle rispettive figure professionali in gioco. Le ore schedulate infatti potrebbero essere
 insufficienti o allocate in ruoli in cui ne sono sufficienti un numero minore. Il mancato utilizzo
@@ -112,21 +105,21 @@ dove maggiormente necessarie al fine di rispettare le milestone previste, con gl
 obiettivi di qualità posti.
 \end{description}
 
-\subsection{Analisi dei requisiti non corretta}
+\subsection{Analisi dei requisiti errata}
 \begin{description}
 \item[Descrizione:] Fondamentale per il successo del progetto è un'analisi dei requisiti di
 qualità ed uno studio molto approfondito del bisogno degli utenti target e delle
 caratteristiche positive e negative dei competitor analizzati. Un errore in questa fase
 del progetto sarebbe identificato solamente nei primi test pubblici del prodotto,
-il che significherebbe dover riprendere per mano l'intero processo di sviluppo con
+il che significherebbe dover iterare l'intero processo di sviluppo con
 significative perdite di tempo e risorse.
 \item[Soluzione:] La ripartizione oraria terrà conto della necessità di assegnare un numero
 sostanzioso di ore al processo di analisi e sarà utilizzato, ove necessario,
 personale esterno altamente qualificato al fine di garantire una buona riuscita di
 questo processo così critico. 
 \item[Impatto:] 5, un processo di analisi completato frettolosamente potrebbe portare a gravi rallentamenti ed anche al fallimento del progetto.
-\item[Probabilità:] 2, nonostante le misure intraprese per evitare questo problema, saranno sicuramente possibili delle problematiche relative ai requisiti.
-\item[Controllo:] Il PM  accertarsi che quanto prodotto durante il processo di analisi sia in linea con la visione aziendale; tuttavia sarà solo nelle fasi di test da parte degli utenti che si potranno delineare eventuali problematiche.
+\item[Probabilità:] 2, nonostante le misure intraprese per evitare questo problema, saranno sicuramente possibili delle problematiche relative ai requisiti, in quanto la difficoltà di individuare correttamente tutti i possibili requisiti è molto alta.
+\item[Controllo:] Il PM deve accertarsi che quanto prodotto durante il processo di analisi sia in linea con la visione aziendale; tuttavia sarà solo nelle fasi di test da parte degli utenti che si potranno delineare eventuali problematiche.
 \end{description}
 
 \subsection{Cause legali}
@@ -134,8 +127,7 @@ questo processo così critico.
 \item[Descrizione:] Vista la tipologia di prodotto sviluppato e vista la grande quantità di
 dati personali memorizzati, è possibile che un competitor o un gruppo di utenti, decidano di fare causa all'azienda.
 \item[Soluzione:] Per evitare che i competitor agiscano legalmente contro l'azienda bisogna porre massima cura nell'accertarsi che le idee o i software utilizzati non vengano usati in maniera illegale e che i brevetti di terzi siano rispettati. Per
-quanto riguarda le azioni legali intraprese dagli utenti si possono evidenziare 2
-motivazioni:
+quanto riguarda le azioni legali intraprese dagli utenti si possono evidenziare due motivazioni:
 \begin{itemize}
 \item privacy: in questo caso basterà informare preventivamente gli utenti di come
 i loro dati verranno salvati all'interno del database.
@@ -144,11 +136,26 @@ i loro dati verranno salvati all'interno del database.
 dell'azienda, ecc); in questo caso sarà il RL a valutare il miglior modo di
 gestire la situazione.
 \end{itemize}
-\item[Impatto:] 5, una causa legale può protrarsi per per molto tempo e portare ad uno spreco di finanze
+\item[Impatto:] 5, una causa legale può protrarsi per molto tempo e portare ad uno spreco di finanze
 dell'azienda mettendo a rischio il progetto stesso.
-\item[Probabilità:] 2, bisognerà stare molto attenti essendo una problematica spesso presente.
+\item[Probabilità:] 2, richiederà una notevole attenzione essendo una problematica critica e di difficile risoluzione.
 \item[Controllo:] Il RL dovrà definire attentamente i contratti e tutta la documentazione
 legale. Il PM dovrà chiamarlo prontamente in causa alle prime avvisaglie di
 problematiche legali, in modo da poterle risolvere nel minor tempo possibile.
 \end{description}
 
+\subsection{Sintesi dei rischi di progetto}
+In tabella \ref{tab: sintesi possibili rischi} sono riassunti i possibili rischi che possono intercorrere durante lo sviluppo del progetto con indicati i livelli di impatto e la probabilità che possano verificarsi.
+
+\begin{longtable}{ | >{\centering}p{6cm} | >{\centering}m{2cm} | >{\centering}m{3cm} | }
+    \hline
+	\textbf{Rischio} & \textbf{Impatto} & \textbf{Probabilità} \tabularnewline \hline
+		Indisposizione del personale & 4 & 3 \tabularnewline
+		Fallimento del progetto & 5 & 3 \tabularnewline
+		Errata pianificazione temporale & 4 & 5 \tabularnewline
+		Analisi dei requisiti errata & 5 & 2 \tabularnewline
+		Cause legali & 5 & 2 \tabularnewline
+	\hline
+\caption{Sintesi possibili rischi}
+\label{tab: sintesi possibili rischi}
+\end{longtable}
