Modificato sezione rischi

--- a/PianoDiProgetto/sections/rischi.tex
+++ b/PianoDiProgetto/sections/rischi.tex
@@ -78,7 +78,6 @@ seguenti procedure:
 	in cosa il prodotto si distingue rispetto ai concorrenti;
 	\item l'azienda dovrà porre particolare cura al rapporto con gli utenti e dovrà
 	proporre soluzioni o migliorie tempestive basandosi sui possibili consigli da parte del pubblico;
-	\item l'azienda in generale dovrà mettere in atto quanto descritto nella sezione Pubblicità del documento.
 	\end{itemize}
 \item[Impatto:] 5, la mancata adozione del nostro prodotto da parte degli utenti porterebbe
 al fallimento stesso del progetto.
@@ -124,22 +123,18 @@ questo processo così critico.
 
 \subsection{Cause legali}
 \begin{description}
-\item[Descrizione:] Vista la tipologia di prodotto sviluppato e vista la grande quantità di
-dati personali memorizzati, è possibile che un competitor o un gruppo di utenti, decidano di fare causa all'azienda.
-\item[Soluzione:] Per evitare che i competitor agiscano legalmente contro l'azienda bisogna porre massima cura nell'accertarsi che le idee o i software utilizzati non vengano usati in maniera illegale e che i brevetti di terzi siano rispettati. Per
-quanto riguarda le azioni legali intraprese dagli utenti si possono evidenziare due motivazioni:
+\item[Descrizione:] Visto il prodotto sviluppato \'{e} possibile che qualche competitor o addirittura qualche utente decida di procedere con cause legali verso l'azienda.
+\item[Soluzione:] Per evitare sgradevoli inconvenienti per l'azienda bisogna porre massima cura nell'accertarsi che le idee non vengano usate in maniera illegale e che eventuali brevetti gi\'{a} esistenti di terzi non siano violati. Per
+quanto riguarda le azioni legali intraprese contro l'azienda si possono evidenziare alcune motivazioni:
 \begin{itemize}
-\item privacy: in questo caso basterà informare preventivamente gli utenti di come
-i loro dati verranno salvati all'interno del database.
-\item  altro: un utente potrebbe far causa all'azienda per le motivazioni più svariate
-(es.: tematiche affrontate in certi progetti, commenti fatti dai dipendenti
-dell'azienda, ecc); in questo caso sarà il RL a valutare il miglior modo di
-gestire la situazione.
+\item brevetti: nella realizzazione del progetto si sono violati alcuni brevetti nonostante fosse stata svolta una buona ricerca precedentemente per cercare di evitare questo problema
+\item altro: un utente potrebbe decidere di far causa all'azienda per le motivazioni più svariate (es: perdita di possibili dati in seguito ad azioni errate magari non descritte chiaramente nei manuali),
+ in questo caso sarà il RL a valutare il miglior modo per gestire la situazione che potrebbe venire a crearsi.
 \end{itemize}
 \item[Impatto:] 5, una causa legale può protrarsi per molto tempo e portare ad uno spreco di finanze
 dell'azienda mettendo a rischio il progetto stesso.
 \item[Probabilità:] 2, richiederà una notevole attenzione essendo una problematica critica e di difficile risoluzione.
-\item[Controllo:] Il RL dovrà definire attentamente i contratti e tutta la documentazione
+\item[Controllo:] Il RL dovrà definire attentamente tutta la documentazione
 legale. Il PM dovrà chiamarlo prontamente in causa alle prime avvisaglie di
 problematiche legali, in modo da poterle risolvere nel minor tempo possibile.
 \end{description}
